Fix spacing on features cards

--- a/src/sass/components/_grid-cards.scss
+++ b/src/sass/components/_grid-cards.scss
@@ -6,27 +6,50 @@
     grid-template-columns: 1fr 1fr 1fr;
 
     &__green-card {
+        align-content: space-between;
         background-color: $color-accent-200;
         border-radius: $grid-card-border-radius;
+        display: grid;
         grid-area: 1 / 1 / 2 / 2;
         padding: $grid-card-padding;
+        & .heading-3 {
+            padding-bottom: $heading-3-bottom-padding;
+        }
     }
+    
     &__yellow-card {
+        align-content: space-between;
         background-color: $color-extra-150;
         border-radius: $grid-card-border-radius;
+        display: grid;
         grid-area: 1 / span 2;
         padding: $grid-card-padding;
+        & .heading-3 {
+            padding-bottom: $heading-3-bottom-padding;
+        }
     }
+
     &__pink-card {
+        align-content: space-between;
         background-color: $color-extra-200;
         border-radius: $grid-card-border-radius;
+        display: grid;
         grid-area: 2 / 1 / 3 / 3;
         padding: $grid-card-padding;
+        & .heading-3 {
+            padding-bottom: $heading-3-bottom-padding;
+        }
     }
+
     &__blue-card {
+        align-content: space-between;
         background-color: $color-extra-250;
         border-radius: $grid-card-border-radius;
+        display: grid;
         grid-area: 2 / 3 / 3 / 4;
         padding: $grid-card-padding;
+        & .heading-3 {
+            padding-bottom: $heading-3-bottom-padding;
+        }
     }
 }
